--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -91,6 +91,7 @@ friends:
   开源中国: http://www.oschina.net/
   阿里云: http://www.net.cn/
   魔泊云: http://www.mopaas.com/
+  七牛云: https://www.qiniu.com/
   Dillinger: http://dillinger.io/
 
 
