--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Leo小站
+title: Leo记事
 subtitle: 相信下一刻的美好
 description: 如果每个人都是从内心深处获取正能量，那我一定是个很内向的人
 author: Leo
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://zwq.xyz
+url: http://wqzhang.xyz
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
